2024-03-29 Konstantin Kushnir <chpock@gmail.com>
	* Add procedures for md5/sha1/sha256 hashes
	* Fix minor compiler warnings

2024-03-24 Konstantin Kushnir <chpock@gmail.com>
	* Fix pkgconfig for xz feature status
	* Don't load tcl versions of ::pages and ::fsindex by default
	* Don't use xz compression when it is inefficient
	* Add tests for all compression methods

2024-03-23 Konstantin Kushnir <chpock@gmail.com>
	* Set compression level 9 for xz
	* Make test cookfsVfs-1.9 more verbose as it fails randomly

2024-03-17 Konstantin Kushnir <chpock@gmail.com>
	* Refactor tests to not depend on source files

2024-03-14 Konstantin Kushnir <chpock@gmail.com>
	* Bumped minimum Tcl version to 8.5.0
	* Enable compiler warnings
	* Fix minor issues from compiler warnings

2024-03-14 Konstantin Kushnir <chpock@gmail.com>
	* Add support for xz compression and use it by default

2012-05-22 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* scripts/writer.tcl: Use [array startsearch]/[array next]/[array anymore] instead of [array get] to package small files - reduces memory usage

2012-03-12 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added support for dataoffset command to return offset to specific pages
	* generic/pages.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* tests/pages.test:

2012-02-28 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added more verbose error information to cookfs
	* generic/pages.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* tests/vfs.test:
	* tests/pages.test:

2011-12-20 Wojciech Kocjan <zoro2@users.sourceforge.net>
	* generic/pages.c: Added support for getting currently set compression using pages and mount command
	* generic/pagesCompr.c:
	* generic/pages.h:
	* generic/pagesCompr.h:
	* generic/pagesCmd.c:
	* scripts/pages.tcl:
	* scripts/cookvfs.tcl:
	* tests/vfs.test:
	* tests/pages.test:

2011-12-15 Wojciech Kocjan <zoro2@users.sourceforge.net>